(feat): finish patient creation

--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -7,15 +7,16 @@
 </head>
 <body>
 <div class="container mt-4">
+    <a th:href="@{/newPatient}" class="btn btn-primary">Crear paciente</a>
     <table class="table">
         <thead>
         <tr>
             <th>Nombre completo</th>
             <th>Fecha de nacimiento</th>
-            <th>Identificación</th>
             <th>Tipo identificación</th>
+            <th>Identificación</th>
             <th>EPS</th>
-            <th>Historia clinica</th>
+            <th>Historia clínica</th>
             <th>Acciones</th>
         </tr>
         </thead>
