--- a/src/main/resources/templates/patientsForm.html
+++ b/src/main/resources/templates/patientsForm.html
@@ -15,6 +15,10 @@
             </div>
             <div class="card-body">
                 <div class="from-group">
+                    <label>id</label>
+                    <input th:field="*{id}" type="text" class="form-control">
+                </div>
+                <div class="from-group">
                     <label>Nombre Completo</label>
                     <input th:field="*{fullName}" type="text" class="form-control">
                 </div>
