--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="container mt-4">
+  <a th:href="@{/newDoctor}" class="btn btn-primary">Crear medico</a>
   <table class="table">
     <thead>
     <tr>
