(feat): finish doctors edition

--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -33,7 +33,7 @@
       <td th:text="${doctor.startHour}"></td>
       <td th:text="${doctor.endHour}"></td>
       <td>
-        <a class="btn btn-warning">Editar</a>
+        <a th:href="@{/editDoctor/}+${doctor.id}" class="btn btn-warning">Editar</a>
         <a class="btn btn-danger">Eliminar</a>
       </td>
     </tr>
