(feat): finish main menu page

--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -8,6 +8,7 @@
 <body>
 <div class="container mt-4">
   <a th:href="@{/newDoctor}" class="btn btn-primary">Crear medico</a>
+  <a th:href="@{/}" class="btn btn-danger">Volver</a>
   <table class="table">
     <thead>
     <tr>
