--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -8,6 +8,7 @@
 <body>
 <div class="container mt-4">
     <a th:href="@{/newPatient}" class="btn btn-primary">Crear paciente</a>
+    <a th:href="@{/}" class="btn btn-danger">Volver</a>
     <table class="table">
         <thead>
         <tr>
