(feat): finish appointment list & creation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col text-center mt-4">
             <div class="mt-4">
-                <a th:href="@{/}"><img src="img/appointment.png" alt="Citas"></a>
+                <a th:href="@{/appointmentsList}"><img src="img/appointment.png" alt="Citas"></a>
             </div>
             <h1>CITAS</h1>
         </div>
