--- a/src/main/resources/templates/appointmentsForm.html
+++ b/src/main/resources/templates/appointmentsForm.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="from-group">
                         <label>Hora</label>
-                        <input th:field="*{appointmentHour}" type="time" class="form-control">
+                        <input th:field="*{appointmentHour}" type="time" step="3600" class="form-control">
                     </div>
                 </div>
                 <div class="card-footer text-center">
