--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html xmlns:th="http:://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Pagina Medicos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Pagina Medicos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
 <div class="container mt-4">
-  <a th:href="@{/newDoctor}" class="btn btn-primary">Crear medico</a>
-  <a th:href="@{/}" class="btn btn-danger">Volver</a>
-  <table class="table">
-    <thead>
-    <tr>
-      <th>Nombre completo</th>
-      <th>Tipo identificación</th>
-      <th>Identificación</th>
-      <th>Número tarjeta profesional</th>
-      <th>Experiencia (años)</th>
-      <th>Especialidad</th>
-      <th>Hora inicio atención</th>
-      <th>Hora fin atención</th>
-      <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="doctor:${doctorsList}">
-      <td th:text="${doctor.fullName}"></td>
-      <td th:text="${doctor.identificationType}"></td>
-      <td th:text="${doctor.identification}"></td>
-      <td th:text="${doctor.professionalCard}"></td>
-      <td th:text="${doctor.experience}"></td>
-      <td th:text="${doctor.specialty}"></td>
-      <td th:text="${doctor.startHour}"></td>
-      <td th:text="${doctor.endHour}"></td>
-      <td>
-        <a th:href="@{/editDoctor/}+${doctor.id}" class="btn btn-warning">Editar</a>
-        <a th:onclick="deleteDoctor([[${doctor.id}]])" class="btn btn-danger">Eliminar</a>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+    <div class="text-center mb-4">
+        <h2>Doctores</h2>
+    </div>
+    <div class="text-center">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Nombre completo</th>
+                <th>Tipo identificación</th>
+                <th>Identificación</th>
+                <th>Número tarjeta profesional</th>
+                <th>Experiencia (años)</th>
+                <th>Especialidad</th>
+                <th>Hora inicio atención</th>
+                <th>Hora fin atención</th>
+                <th>Acciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="doctor:${doctorsList}">
+                <td th:text="${doctor.fullName}"></td>
+                <td th:text="${doctor.identificationType}"></td>
+                <td th:text="${doctor.identification}"></td>
+                <td th:text="${doctor.professionalCard}"></td>
+                <td th:text="${doctor.experience}"></td>
+                <td th:text="${doctor.specialty}"></td>
+                <td th:text="${doctor.startHour}"></td>
+                <td th:text="${doctor.endHour}"></td>
+                <td>
+                    <a th:href="@{/editDoctor/}+${doctor.id}" class="btn btn-warning">Editar</a>
+                    <a th:onclick="deleteDoctor([[${doctor.id}]])" class="btn btn-danger">Eliminar</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="text-center mt-4">
+        <a th:href="@{/newDoctor}" class="btn btn-primary">Crear medico</a>
+        <a th:href="@{/}" class="btn btn-danger">Volver al menú</a>
+    </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+        crossorigin="anonymous"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="functions.js"></script>
 </body>
