--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,23 +9,26 @@
 <body>
 <div class="container mt-4">
     <div class="row align-items-center">
+        <div class="text-center mb-4">
+            <h1>Menu Principal</h1>
+        </div>
         <div class="col text-center mt-4">
             <div class="mt-4">
                 <a th:href="@{/patientsList}"><img src="img/pacient.png" alt="Pacientes"></a>
             </div>
-            <h1>PACIENTES</h1>
+            <h1>Pacientes</h1>
         </div>
         <div class="col text-center mt-4">
             <div class="mt-4">
                 <a th:href="@{/doctorsList}"><img src="img/doctor.png" alt="Medicos"></a>
             </div>
-            <h1>MEDICOS</h1>
+            <h1>Medicos</h1>
         </div>
         <div class="col text-center mt-4">
             <div class="mt-4">
                 <a th:href="@{/appointmentsList}"><img src="img/appointment.png" alt="Citas"></a>
             </div>
-            <h1>CITAS</h1>
+            <h1>Citas</h1>
         </div>
     </div>
 </div>
