--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -3,41 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Pagina Pacientes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
 <div class="container mt-4">
-    <a th:href="@{/newPatient}" class="btn btn-primary">Crear paciente</a>
-    <a th:href="@{/}" class="btn btn-danger">Volver</a>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Nombre completo</th>
-            <th>Fecha de nacimiento</th>
-            <th>Tipo identificación</th>
-            <th>Identificación</th>
-            <th>EPS</th>
-            <th>Historia clínica</th>
-            <th>Acciones</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="patient:${patientsList}">
-            <td th:text="${patient.fullName}"></td>
-            <td th:text="${patient.birthdate}"></td>
-            <td th:text="${patient.identification}"></td>
-            <td th:text="${patient.identificationType}"></td>
-            <td th:text="${patient.eps}"></td>
-            <td th:text="${patient.history}"></td>
-            <td>
-            <a th:href="@{/editPatient/}+${patient.id}" class="btn btn-warning">Editar</a>
-            <a th:onclick="deletePatient([[${patient.id}]])" class="btn btn-danger">Eliminar</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="text-center mb-4">
+        <h2>Pacientes</h2>
+    </div>
+    <div class="text-center">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Nombre completo</th>
+                <th>Fecha de nacimiento</th>
+                <th>Tipo identificación</th>
+                <th>Identificación</th>
+                <th>EPS</th>
+                <th>Historia clínica</th>
+                <th>Acciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="patient:${patientsList}">
+                <td th:text="${patient.fullName}"></td>
+                <td th:text="${patient.birthdate}"></td>
+                <td th:text="${patient.identification}"></td>
+                <td th:text="${patient.identificationType}"></td>
+                <td th:text="${patient.eps}"></td>
+                <td th:text="${patient.history}"></td>
+                <td>
+                    <a th:href="@{/editPatient/}+${patient.id}" class="btn btn-warning">Editar</a>
+                    <a th:onclick="deletePatient([[${patient.id}]])" class="btn btn-danger">Eliminar</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="text-center mt-4">
+        <a th:href="@{/newPatient}" class="btn btn-primary">Crear paciente</a>
+        <a th:href="@{/}" class="btn btn-danger">Volver al menú</a>
+    </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+        crossorigin="anonymous"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="functions.js"></script>
 </body>
